# google-alert

./: README.md  main.py  old_mm.py  pyproject.toml
.github/workflows/: ci-cd.yml  create-release.yml
google_alert/: browser.py  chromecast_alert.py  monitor_chron.py
tests/: test_monitor.py
