[project]
name = "google-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.10.18",
    "pychromecast>=14.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["google_alert"]

[tool.hatch.build.sources]
"." = "google_alert"
